--- a/style.css
+++ b/style.css
@@ -32,14 +32,14 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.box1{
+.Hero{
     width: 1440px; height: 470px;
 }
 
-.mainbox{
+.homepadge{
     display: inline-block;
 }
 
-.box2{
+._content{
     width: 1320px; height: 297px;
 }
