--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 .header{
-    background-color: rgb(0, 136, 255);
     justify-content: space-around;
     display: flex;
     width: 1440px; height: 84;
@@ -34,6 +33,8 @@
 
 .Hero{
     width: 1440px; height: 470px;
+    margin-top: 144px;
+    margin-bottom: 3872px;
 }
 
 .homepadge{
@@ -42,4 +43,15 @@
 
 ._content{
     width: 1320px; height: 297px;
+    display: flex;
+    margin: 0px 60px;
+    margin-top: 173px;
+}
+
+.maintext{
+    width: 685px; height: 297px;
+}
+
+.discription{
+    width: 605px; height: 297px;
 }
